pkg/ibmvpc/examples/out/explain_out/VsiToVsi5_all_vpcs_explain_debug.txt
Connectivity explanation between vsi3a-ky and vsi2-ky
=====================================================

No connection between vsi3a-ky[10.240.30.5] and vsi2-ky[10.240.20.4]; connection blocked by ingress
Egress: security group sg3-ky allows connection (with allow rules); network ACL acl3-ky allows connection (with allow rules)
Ingres: network ACL acl2-ky allows connection (with allow rules); security group sg2-ky blocks connection (no relevant allow rules)

Rules details:
~~~~~~~~~~~~~~
Egress:
security group sg3-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
	index: 2, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, cidr: 0.0.0.0/0
	index: 3, direction: outbound,  conns: protocol: tcp,  dstPorts: 100-200, cidr: 0.0.0.0/0
network ACL acl3-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
Ingress:
network ACL acl2-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg2-ky blocks connection since there are no relevant allow rules
------------------------------------------------------------------------------------------------------------------------
